Dei uma ajustada no CSS

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <main>
         <div>
             <section id="dol">
-                <span class="cur">US$</span>
+                <span class="cur1">US$</span>
                 <input id="usd" type="text"/>
             </section>
             <section id="real">
-                <span class="cur">R$</span>
+                <span class="cur2">R$</span>
                 <input id="brl" type="text"/>
             </section>
         </div>
